--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "gatsby-plugin-manifest": "^2.2.31",
     "gatsby-plugin-offline": "^3.0.27",
     "gatsby-plugin-react-helmet": "^3.1.16",
+    "gatsby-plugin-sass": "^2.1.26",
     "gatsby-plugin-sharp": "^2.3.5",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-source-buttercms": "^2.0.2",
     "gatsby-source-filesystem": "^2.1.40",
+    "gatsby-transformer-remark": "^2.6.43",
     "gatsby-transformer-sharp": "^2.3.7",
+    "mappy-breakpoints": "^0.2.3",
+    "node-sass": "^4.13.0",
+    "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
