--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "standing-dreams",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "description": "Standing Dreams portfolio in Gatsby.",
+  "version": "2.0.0",
+  "author": "Douglas Rogers <doug@standingdreams.com>",
   "dependencies": {
     "gatsby": "^2.18.8",
     "gatsby-image": "^2.2.34",
