--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "2.0.0",
   "author": "Douglas Rogers <doug@standingdreams.com>",
   "dependencies": {
+    "babel-plugin-prismjs": "^2.0.1",
+    "babel-preset-gatsby": "^0.10.0",
     "gatsby": "^2.30.1",
     "gatsby-image": "^2.9.0",
     "gatsby-plugin-manifest": "^2.10.0",
@@ -13,6 +15,7 @@
     "gatsby-plugin-sass": "^3.0.0",
     "gatsby-plugin-sharp": "^2.12.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-remark-prismjs": "^3.11.0",
     "gatsby-source-buttercms": "^2.1.4",
     "gatsby-source-filesystem": "^2.9.0",
     "gatsby-transformer-remark": "^2.14.0",
@@ -20,6 +23,7 @@
     "mappy-breakpoints": "^0.2.3",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
+    "prismjs": "^1.23.0",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
