--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^8.6.0",
     "gatsby": "^2.32.13",
     "gatsby-image": "^2.11.0",
+    "gatsby-plugin-google-gtag": "^3.5.0",
     "gatsby-plugin-manifest": "^2.12.1",
     "gatsby-plugin-offline": "^3.10.2",
     "gatsby-plugin-react-helmet": "^3.10.0",
