--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "version": "2.0.0",
   "author": "Douglas Rogers <doug@standingdreams.com>",
   "dependencies": {
+    "@mdx-js/react": "^1.6.22",
     "babel-plugin-prismjs": "^2.0.1",
     "babel-preset-gatsby": "^0.10.0",
     "dotenv": "^8.6.0",
     "gatsby": "^2.32.13",
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-manifest": "^2.12.1",
+    "gatsby-plugin-mdx": "^2.10.0",
     "gatsby-plugin-offline": "^3.10.2",
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sass": "^3.2.0",
@@ -31,7 +33,21 @@
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
-    "prettier": "^2.3.0"
+    "eslint": "^7.10.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-config-wesbos": "^1.0.1",
+    "eslint-plugin-html": "^6.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.2",
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "prettier": "^2.1.2",
+    "stylelint": "^13.7.2",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.18.0"
   },
   "keywords": [
     "gatsby"
