--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^10.0.0",
     "gatsby": "^3.10.1",
     "gatsby-image": "^3.10.0",
+    "gatsby-plugin-feed": "^3.10.0",
     "gatsby-plugin-google-gtag": "^3.10.0",
     "gatsby-plugin-image": "^1.10.1",
     "gatsby-plugin-manifest": "^3.10.0",
