--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "babel-plugin-prismjs": "^2.1.0",
     "babel-preset-gatsby": "^1.14.0",
     "dotenv": "^10.0.0",
-    "gatsby": "^3.14.5",
+    "gatsby": "^3.14.6",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-feed": "^3.14.0",
     "gatsby-plugin-google-gtag": "^3.14.0",
-    "gatsby-plugin-image": "^1.14.1",
+    "gatsby-plugin-image": "^1.14.2",
     "gatsby-plugin-manifest": "^3.14.0",
     "gatsby-plugin-mdx": "^2.14.0",
     "gatsby-plugin-offline": "^4.14.0",
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-sass": "^4.14.0",
-    "gatsby-plugin-sharp": "^3.14.2",
+    "gatsby-plugin-sharp": "^3.14.3",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-prismjs": "^5.11.0",
     "gatsby-source-filesystem": "^3.14.0",
@@ -30,29 +30,29 @@
     "mappy-breakpoints": "^0.2.3",
     "node-sass": "^6.0.1",
     "normalize.css": "^8.0.1",
-    "postcss": "^8.3.11",
-    "prismjs": "^1.25.0",
-    "prop-types": "^15.7.2",
+    "postcss": "^8.4.5",
+    "prismjs": "^1.26.0",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "eslint": "^8.1.0",
+    "eslint": "^8.7.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-wesbos": "^2.1.0",
     "eslint-plugin-html": "^6.2.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.4.1",
-    "stylelint": "^14.0.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "^2.5.1",
+    "stylelint": "^14.2.0",
     "stylelint-config-standard": "^23.0.0",
     "stylelint-order": "^5.0.0",
-    "stylelint-scss": "^4.0.0"
+    "stylelint-scss": "^4.1.0"
   },
   "keywords": [
     "gatsby"
@@ -73,5 +73,8 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
